[package]
name = "pine-client"
version = "0.1.0"
authors = ["al3x al3x@al3x.io"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

yew = "0.18"
yew-router = "0.15"
yewtil = "0.4"

css-in-rust = "0.5.0"

serde = "1"
serde_json = "1"

[dependencies.lightql]
git = "https://github.com/0al3x/lightql-rs.git"
branch = "dev"

[dependencies.material-yew]
version = "0.1.0"
features = [
	"full"
]

[dependencies.getrandom] 
version = "0.2"
features = [
	"js"
]

[dependencies.uuid]
version = "0.8"
features = [
	"serde",
	"v4"
]

[dependencies.web-sys]
version = "0.3"
features = [
	'Window',
	'Document',
	'Element',
	'HtmlElement',
]

[dependencies.error]
path = "../pine-error"
package = "pine-error"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

